[lworld] C2 compilation fails with assert "can not use dead node"

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/983c483a-6907-44e0-ad29-98c7183575e2-S15055/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/726f12e0-d56e-495e-8a11-5aa0a469f28b/runs/9bc52041-a4ab-4507-90a5-24dfa44b8c82/workspace/open/src/hotspot/share/opto/node.cpp:373), pid=10927, tid=10942
      # assert(((n0) == __null || !VerifyIterativeGVN || !((n0)->is_dead()))) failed: can not use dead node

      Current CompileTask:
      C2: 38961 2545 b 4 java.lang.invoke.Invokers$Holder::invokeExact_MT (32 bytes)

      Stack: [0x00007f43d7eff000,0x00007f43d8000000], sp=0x00007f43d7ffb330, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x156b6b4] Node::Node(Node*, Node*)+0x2b4
      V [libjvm.so+0x1390c51] PhaseMacroExpand::expand_mh_intrinsic_return(CallStaticJavaNode*)+0x1f1
      V [libjvm.so+0x139ce24] PhaseMacroExpand::expand_macro_nodes()+0xdd4
      V [libjvm.so+0xa4a65f] Compile::Optimize()+0x171f
      V [libjvm.so+0xa4c483] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1a53
      V [libjvm.so+0x861c88] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1f8
      V [libjvm.so+0xa5c461] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xea1
      V [libjvm.so+0xa5d0e8] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x19216d6] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1927b60] Thread::call_run()+0x100
      V [libjvm.so+0x15ea9d6] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: