8262129: [lworld] C2 compilation fails with assert 'can not use dead node'